fix section alignment

--- a/contactPage/contact.css
+++ b/contactPage/contact.css
@@ -4,7 +4,6 @@
 	    flex-direction: row;
     -webkit-justify-content: flex-start;
     box-shadow: 10px 0 15px #888888;
-    width: 89.2%;
 }
 
 .contactDiv {
@@ -18,7 +17,7 @@
 	display: -webkit-flex;
   -webkit-flex-direction: column;
   -webkit-justify-content: flex-start;
-  width: 100%;
+	width: 787px;
 }
 
 form {
